--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Test Web Page</title>
 </head>
+<link rel="stylesheet" href="css/style.css">
+
 <body>
     <h1>Welcome to My Test Web Page</h1>
     <p>This is a test web page. Feel free to modify it as needed.</p>
