--- a/Myplan.html
+++ b/Myplan.html
@@ -62,7 +62,7 @@
             
         </section>
     </main>
-    <script src="src/Myplan.js"></script>
+    <script src="src/MyPlan.js"></script>
 </body>
 
 <footer>
