--- a/Myplan.html
+++ b/Myplan.html
@@ -17,6 +17,7 @@
         </nav>
     </header>
     <main>
+        <div class="section-container">
         <section id="Finding" class="fade-in">
             <h2 class="gradient-title">找尋大量素材</h2>
             <img src="images\finds.png" alt="my photo">
@@ -61,6 +62,7 @@
             </p>
             
         </section>
+    </div>
     </main>
     <script src="src/MyPlan.js"></script>
 </body>
