--- a/index.html
+++ b/index.html
@@ -3,91 +3,142 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Self Intrduction Website</title>
-    <link rel="stylesheet" href="css/index.css">
+    <title>Self Introduction Website</title>
+    <link rel="stylesheet" href="css/resolutions.css">
 </head>
 <body>
     <header>
         <h1 class="gradient-title">我的個人網頁</h1>
         <nav>
             <ul class="nav-list">
-                <li><a href="resolutions.html">四件大事清單</a></li>
-                <li><a href="myplan.html">始於足下</a></li>
+                <button class="back-button" onclick="window.location.href='resolutions.html'">四件大事</button>
+                <button class="back-button" onclick="window.location.href='Myplan.html'">始於足下</button>
             </ul>
         </nav>
     </header>
     <main>
-        <section id="intro" class="fade-in">
-            <h2 class="gradient-title">About Me</h2>
-            <img src="images/Person_icon_BLACK-01.svg.png" alt="my photo">
-            <p>我是劉振宇，一名資工系的學生。屏東出生，成長於高雄，當前於長庚大學就讀。<br>
-                本學期任職網頁程式助教，目前在校內資訊中心擔任網路維修人員的職務，並同時在校內國際事務處打工。<br>
-                暑期實習及畢業專題主要負責網頁後端的開發及維護，對資料庫管理系統有一定的經驗。<br>
-                之前曾修習過諮商心理學相關課程，對於心理學及諮商輔導有相關知識。<br>
-                擅長的能力有網頁前後端開發、資料庫管理、Python、C++及心理學知識等。<br>
-                未來希望能夠將資工與心理學結合，開發出更多有助於人們生活的應用程式。
-            </p>
-        </section>
-        <section id="skills" class="fade-in">
-            <h2 class="gradient-title">技能</h2>
-            <ul>
-                <li>SQL<img src="images\SQL.png" alt="my photo"></li>
-                <li>PHP<img src="images\PHP-logo.svg.png" alt="my photo"></li>
-                <li>Python<img src="images\Python.jpg" alt="my photo"></li>
-                <li>C++<img src="images\C++.png" alt="my photo"></li>
-                <li>HTML<img src="images\html.png" alt="my photo"></li>
-                <li>CSS<img src="images\CSS.png" alt="my photo"></li>
-                <li>JavaScript<img src="images\JS.png" alt="my photo"></li>
-            </ul>            
-        </section>
-
-        <section id="projects" class="fade-in">
-            <h2 class="gradient-title">畢業專題</h2>
-            <ul>
-                <li>專題名稱：自動化量子啟發式退火器</li>
-                <li>實作內容: 利用數位量子退火技術計算NP-Hard 問題。</li>
-                <li>使用技術: Dwave CPU Nealer、OPtuna。</li>
-            </ul>
-        </section>
-
-        <section id="SummerExp" class="fade-in">
-            <h2 class="gradient-title">暑期實習</h2>
-            <ul>
-                <li>工作地點：長庚大學電機系</li>
-                <li>工作內容: 開發及維護網頁後端。</li>
-                <li>使用技術: Node.js、PHP、SQL。</li>
-            </ul>
-        </section>
-
-
-        <section id="reward" class="fade-in">
-            <h2 class="gradient-title">得獎經歷</h2>
-            <ul>
-                <li>2023 AI+新銳選拔賽 決選獲得40萬獎金</li>
-            </ul>
-        </section>
-
-        <section id="paper" class="fade-in">
-            <h2 class="gradient-title">發表論文</h2>
-            <ul>
-                <li>Title: An Automated Toolchain for QUBO-based Optimization with Quantum-inspired Annealers </li>
-                <li>Author: <b>Chen-Yu Liu</b>; Yun-Ting Zhang; Chin-Fu Nien; Chia-Wei Lin; Wen-Jui Chao; Lien-Po Yu; Yuan-Ho Chen</li>
-                <li>Conference: 20th International SoC Design Conference (ISOCC) , Jeju, Korea, Oct. 2023</li>
-                <li>Publication: IEEE Xplore</li>
-            </ul>
-        </section>
+        <div class="grid-container">
+            <div class="card" onclick="flipCard(this)">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <h2>About Me</h2>
+                        <img src="images/Person_icon_BLACK-01.svg.png" alt="my photo">
+                        <p>點擊我看更多</p>
+                    </div>
+                    <div class="card-back">
+                        <h2>About Me</h2>
+                        <p>我是劉振宇，一名資工系的學生。屏東出生，成長於高雄，當前於長庚大學就讀。<br>
+                            本學期任職網頁程式助教，目前在校內資訊中心擔任網路維修人員的職務，並同時在校內國際事務處打工。<br>
+                            暑期實習及畢業專題主要負責網頁後端的開發及維護，對資料庫管理系統有一定的經驗。<br>
+                            之前曾修習過諮商心理學相關課程，對於心理學及諮商輔導有相關知識。<br>
+                            擅長的能力有網頁前後端開發、資料庫管理、Python、C++及心理學知識等。<br>
+                            未來希望能夠將資工與心理學結合，開發出更多有助於人們生活的應用程式。
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card" onclick="flipCard(this)">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <h2>技能</h2>
+                        <img src="images/skills.png" alt="skills">
+                        <p>點擊我看更多</p>
+                    </div>
+                    <div class="card-back">
+                        <h2>技能</h2>
+                        <ul>
+                            <li>SQL</li>
+                            <li>PHP</li>
+                            <li>Python</li>
+                            <li>C++</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="card" onclick="flipCard(this)">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <h2>畢業專題</h2>
+                        <img src="images/project.png" alt="project">
+                        <p>點擊我看更多</p>
+                    </div>
+                    <div class="card-back">
+                        <h2>畢業專題</h2>
+                        <ul>
+                            <li>專題名稱：自動化量子啟發式退火器</li>
+                            <li>實作內容: 利用數位量子退火技術計算NP-Hard 問題。</li>
+                            <li>使用技術: Dwave CPU Nealer、OPtuna。</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="card" onclick="flipCard(this)">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <h2>暑期實習</h2>
+                        <img src="images/internship.png" alt="internship">
+                        <p>點擊我看更多</p>
+                    </div>
+                    <div class="card-back">
+                        <h2>暑期實習</h2>
+                        <ul>
+                            <li>工作地點：長庚大學電機系</li>
+                            <li>工作內容: 開發及維護網頁後端。</li>
+                            <li>使用技術: Node.js、PHP、SQL。</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="card" onclick="flipCard(this)">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <h2>得獎經歷</h2>
+                        <img src="images/award.png" alt="award">
+                        <p>點擊我看更多</p>
+                    </div>
+                    <div class="card-back">
+                        <h2>得獎經歷</h2>
+                        <ul>
+                            <li>2023 AI+新銳選拔賽 決選獲得40萬獎金</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="card" onclick="flipCard(this)">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <h2>發表論文</h2>
+                        <img src="images/paper.jpg" alt="paper">
+                        <p>點擊我看更多</p>
+                    </div>
+                    <div class="card-back">
+                        <h2>發表論文</h2>
+                        <ul>
+                            <li>Title: An Automated Toolchain for QUBO-based Optimization with Quantum-inspired Annealers </li>
+                            <li>Author: <b>Chen-Yu Liu</b>; Yun-Ting Zhang; Chin-Fu Nien; Chia-Wei Lin; Wen-Jui Chao; Lien-Po Yu; Yuan-Ho Chen</li>
+                            <li>Conference: 20th International SoC Design Conference (ISOCC) , Jeju, Korea, Oct. 2023</li>
+                            <li>Publication: IEEE Xplore</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
-    <script src="src/index.js"></script>
+    <script src="src/resulutions.js"></script>
 </body>
 
 <footer>
     <div class="footer-content">
         <h2 class="gradient-title">Contact Me</h2>
         <a href="mailto:acent70@gmail.com">
-            <img src="images\email.jpg" alt="Email icon">
+            <img src="images/email.jpg" alt="Email icon">
         </a>
         <a href="https://www.facebook.com/lynne.liu/" target="_blank">
-            <img src="images\fb.png" alt="Facebook icon">
+            <img src="images/fb.png" alt="Facebook icon">
         </a>
     </div>
-</footer></html>
+</footer>
+</html>
