--- a/resolutions.html
+++ b/resolutions.html
@@ -9,8 +9,7 @@
 <body>
     <header>
         <h1 class="gradient-title">大學四大清單</h1>
-        <h3 class="gradient-title">這是我在大學最後一年希望能夠完成的四大目標<br>
-                                    每張卡片都可以點開，任意點擊空白處可以關閉</h3>
+        <h3 class="gradient-title">這是我在大學最後一年希望能夠完成的四大目標<br></h3>
         <button class="back-button" onclick="window.location.href='index.html'">返回首頁</button>
         <button class="back-button" onclick="window.location.href='Myplan.html'">始於足下</button>
     </header>
