--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1 class="gradient-title">我的個人網頁</h1>
+        <h2 class="gradient-title">本網頁已架設，連結: lynne613.github.io</h2>
         <nav>
             <ul class="nav-list">
                 <button class="back-button" onclick="window.location.href='resolutions.html'">四件大事</button>
